docs/versioned_docs/version-4.15.0/api/AxesController.mdx
---
custom_edit_url: null
---

<div className="notification is-warning my-2">⚠️ This class is for <strong>internal</strong> use only.</div>

```ts
class AxesController
```

<div>

</div>

A controller that handles the [@egjs/axes](https://naver.github.io/egjs-axes/) events

<div className="container">
  <div className="row mb-2"><div className="col col--6"><strong>Properties</strong></div><div className="col col--6"><strong>Methods</strong></div></div>
  <div className="row"><div className="col col--6"><a href="#axes">axes</a><br/><a href="#panInput">panInput</a><br/><a href="#stateMachine">stateMachine</a><br/><a href="#state">state</a><br/><a href="#animatingContext">animatingContext</a><br/><a href="#controlParams">controlParams</a><br/><a href="#enabled">enabled</a><br/><a href="#position">position</a><br/><a href="#range">range</a><br/><a href="#bounce">bounce</a></div><div className="col col--6"><a href="#init">init</a><br/><a href="#destroy">destroy</a><br/><a href="#enable">enable</a><br/><a href="#disable">disable</a><br/><a href="#release">release</a><br/><a href="#updateAnimation">updateAnimation</a><br/><a href="#stopAnimation">stopAnimation</a><br/><a href="#update">update</a><br/><a href="#addPreventClickHandler">addPreventClickHandler</a><br/><a href="#removePreventClickHandler">removePreventClickHandler</a><br/><a href="#animateTo">animateTo</a><br/><a href="#getCurrentPosition">getCurrentPosition</a></div></div>
</div>

## Properties

### axes {#axes}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

An [Axes](https://naver.github.io/egjs-axes/docs/api/Axes) instance

**Type**: Axes \| null

**See**:
- https://naver.github.io/egjs-axes/docs/api/Axes

### panInput {#panInput}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

An [PanInput](https://naver.github.io/egjs-axes/docs/api/PanInput) instance

**Type**: PanInput \| null

**See**:
- https://naver.github.io/egjs-axes/docs/api/PanInput

### stateMachine {#stateMachine}

<div>

</div>

### state {#state}

<div>

</div>

A activated [State](State) that shows the current status of the user input or the animation

**Type**: [State](State)

### animatingContext {#animatingContext}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

A context of the current animation playing

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|start|number|A start position of the animation|
|end|number|A end position of the animation|
|offset|number|camera offset|

### controlParams {#controlParams}

<div>

</div>

A current control parameters of the Axes instance

**Type**: [ControlParams](ControlParams)

**Returns**: [ControlParams](ControlParams)

### enabled {#enabled}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

A Boolean indicating whether the user input is enabled

**Type**: boolean

### position {#position}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Current position value in [Axes](https://naver.github.io/egjs-axes/release/latest/doc/eg.Axes.html) instance

**Type**: number

### range {#range}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Current range value in [Axes](https://naver.github.io/egjs-axes/release/latest/doc/eg.Axes.html) instance

**Type**: Array&lt;number&gt;

### bounce {#bounce}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

Actual bounce size(px)

**Type**: Array&lt;number&gt;

## Methods

### init {#init}

<div>

</div>

Initialize AxesController

**Returns**: this

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|flicking|[Flicking](Flicking)|||An instance of Flicking|

### destroy {#destroy}

<div>

</div>

Destroy AxesController and return to initial state

**Returns**: void

### enable {#enable}

<div>

</div>

Enable input from the user (mouse/touch)

**Returns**: this

### disable {#disable}

<div>

</div>

Disable input from the user (mouse/touch)

**Returns**: this

### release {#release}

<div>

</div>

Releases ongoing user input (mouse/touch)

**Returns**: this

### updateAnimation {#updateAnimation}

<div>

</div>

Change the destination and duration of the animation currently playing

**Returns**: this

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|position|number|||A position to move|
|duration|number|✔️||Duration of the animation (unit: ms)|

### stopAnimation {#stopAnimation}

<div>

</div>

Stops the animation currently playing

**Returns**: this

### update {#update}

<div>

</div>

Update [@egjs/axes](https://naver.github.io/egjs-axes/)'s state

**Returns**: this

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|controlParams|[ControlParams](ControlParams)||||

**Throws**: [FlickingError](FlickingError)

[NOT_ATTACHED_TO_FLICKING](ERROR_CODE) When [init](AxesController#init) is not called before

### addPreventClickHandler {#addPreventClickHandler}

<div>

</div>

Attach a handler to the camera element to prevent click events during animation

**Returns**: this

### removePreventClickHandler {#removePreventClickHandler}

<div>

</div>

Detach a handler to the camera element to prevent click events during animation

**Returns**: this

### animateTo {#animateTo}

<div>

</div>

Run Axes's [setTo](https://naver.github.io/egjs-axes/release/latest/doc/eg.Axes.html#setTo) using the given position

**Returns**: Promise&lt;void&gt;
- A Promise which will be resolved after reaching the target position

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|position|number|||A position to move|
|duration|number|||Duration of the animation (unit: ms)|
|axesEvent|number|✔️||If provided, it'll use its [setTo](https://naver#github#io/egjs-axes/release/latest/doc/eg#Axes#html#setTo) method instead|

**Throws**: [FlickingError](FlickingError)

|code|condition|<br />|---|---|<br />|[NOT_ATTACHED_TO_FLICKING](ERROR_CODE)|When [init](Control#init) is not called before|<br />|[ANIMATION_INTERRUPTED](ERROR_CODE)|When the animation is interrupted by user input|

### getCurrentPosition {#getCurrentPosition}

<div>

</div>

Returns the current axes position

